콘텐츠 페이지 수정

--- a/src/main/resources/templates/ott_contents/gameInfo.html
+++ b/src/main/resources/templates/ott_contents/gameInfo.html
@@ -215,24 +215,16 @@
                   >
                     수정
                   </button>
-                  <button
+                  <!-- <button
                     type="button"
                     class="mention-btn btn btn-secondary btn-sm"
                     th:data-rno="${reply.rno}"
                     th:if="${#authentication.name != 'anonymousUser'}"
                   >
                     댓글
-                  </button>
+                  </button> -->
                   <!-- 트리거 버튼 -->
-                  <button
-                    class="report-btn btn btn-secondary btn-sm"
-                    th:if="${#authentication.name != 'anonymousUser' 
-                                  and reply.replyer != #authentication.name}"
-                    th:data-rno="${reply.rno}"
-                    th:data-replyer-nickname="${reply.replyerNickname}"
-                  >
-                    🚨
-                  </button>
+
 
                   <!-- 리뷰는 별점 표시 -->
                   <span>
@@ -272,16 +264,19 @@
                     title="댓글 달기"
                   >
                     <i class="fa-solid fa-comment"></i>
-                  </button>
+                  </button> 
                   <button
                     class="report-btn btn btn-sm"
-                    th:if="${#authentication.name != 'anonymousUser'}"
+                    th:if="${#authentication.name != 'anonymousUser' 
+                                  and reply.replyer != #authentication.name}"
                     th:data-rno="${reply.rno}"
+                    th:data-replyer-nickname="${reply.replyerNickname}"
                     aria-label="신고"
                     title="신고"
                   >
                     🚨
                   </button>
+                  
                   <pre><p th:text="${reply.text}">댓글 텍스트</p></pre>
                 </div>
               </div>
