--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -33,9 +33,10 @@
     <link rel="stylesheet" th:href="@{/css/owl.carousel.min.css}" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}" type="text/css" />
-    <link rel="stylesheet" th:href="@{/css/slicknav.min.css}" type="text/css" />
+    
     <link rel="stylesheet" th:href="@{/css/style.css}" type="text/css" />
     <link rel="stylesheet" th:href="@{/css/reply.css}" type="text/css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
     <th:block layout:fragment="css"></th:block>
     <script th:src="@{/js/search.js}"></script>
