--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>관리자 페이지</title>
-    <link rel="stylesheet" th:href="@{/admin/admin.css}" />
+    <link rel="stylesheet" th:href="@{/admin.css}" />
 
     <!-- CSRF 메타태그 추가 -->
     <meta name="_csrf" th:content="${_csrf.token}" />
