--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -54,18 +54,8 @@
                 action="/contents"
                 method="get"
                 class="search-box"
-                style="display: flex; gap: 2px; align-items: center"
+                style="display: flex; gap: 2px; align-items: center; margin-top: 7px"
               >
-                <!-- <select name="content" id="content" onchange="updateCityOptions()">
-                  <option value="m">영화</option>
-                  <option value="g">게임</option>
-                </select>
-                <select name="type" id="type">
-                  <option value="t">제목</option>
-                  <option value="g">장르</option>
-                  <option value="d">감독명</option>
-                  <option value="a">배우명</option>
-                </select> -->
                 <input type="text" name="keyword" id="search" placeholder="검색어" />
                 <input type="submit" value="검색" />
               </form>
